Used findbugs to look for potential problems.